Added and styled Photos component, other minor changes

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,11 @@ a {
   color: #9670f4;
 }
 
+.App {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
 .App-header {
   margin: 30px 0;
 }
@@ -19,4 +24,5 @@ a {
 .App-footer {
   text-align: center;
   margin: 30px 0;
+  font-size: 16px;
 }
